--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <!-- google font poppins -->
   </head>
 
@@ -26,27 +25,23 @@
               <div
                 tabindex="0"
                 role="button"
-                class="btn btn-ghost lg:hidden bg-white text-black"
-              >
+                class="btn btn-ghost lg:hidden bg-white text-black">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5 bg-white text-black"
+                  class="h-5 w-5 text-left bg-white text-black"
                   fill="none"
                   viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
+                  stroke="currentColor">
                   <path
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M4 6h16M4 12h8m-8 6h16"
-                  />
+                    d="M4 6h16M4 12h8m-8 6h16" />
                 </svg>
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow"
-              >
+                class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a>HOME</a></li>
                 <li><a>ABOUT US</a></li>
                 <li><a>SERVICES</a></li>
@@ -61,26 +56,22 @@
             <ul class="menu bg-white text-black menu-horizontal px-1">
               <li
                 style="font-family: 'Poppins', sans-serif"
-                class="text-[14px] leading-[22px] pr-11"
-              >
+                class="text-[14px] leading-[22px] pr-11">
                 <a>HOME</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
-                class="text-[14px] leading-[22px] pr-11"
-              >
-                <a>ABOUT US</a>
+                class="text-[14px] leading-[22px] pr-11">
+                <a href="about.html">ABOUT US</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
-                class="text-[14px] leading-[22px] pr-11"
-              >
+                class="text-[14px] leading-[22px] pr-11">
                 <a>SERVICES</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
-                class="text-[14px] leading-[22px]"
-              >
+                class="text-[14px] leading-[22px]">
                 <a>WORKS</a>
               </li>
             </ul>
@@ -98,26 +89,22 @@
             <div class="sm:w-1/2 w-full text-center sm:text-left">
               <h4
                 style="font-family: 'Poppins', sans-serif"
-                class="font-medium leading-[26px] text-[16px] pt-[45px] text-[#5E3BEE] "
-              >
+                class="font-medium leading-[26px] text-[16px] pt-[45px] text-[#5E3BEE]">
                 SAKIB Al HASAN
               </h4>
               <h1
                 style="font-family: 'Poppins', sans-serif"
-                class="font-bold text-[30px] lg:text-[60px] lg:w-[480px] md:leading-[78px] lg:leading-[78px] py-[45px]"
-              >
+                class="font-bold text-[30px] lg:text-[60px] lg:w-[480px] md:leading-[78px] lg:leading-[78px] py-[45px]">
                 Hello, my name’s Sakib. I’m MERN Stack Developer.
               </h1>
               <button
                 style="font-family: 'Poppins', sans-serif"
-                class="btn btn-outline btn-primary text-black"
-              >
+                class="btn btn-outline btn-primary text-black">
                 CONTACT ME
               </button>
               <button
                 style="font-family: 'Poppins', sans-serif"
-                class="btn btn-outline btn-primary ml-5 text-black"
-              >
+                class="btn btn-outline btn-primary ml-5 text-black">
                 DOWNLOAD CV
               </button>
             </div>
@@ -128,6 +115,138 @@
         </div>
       </div>
       <!-- banner end  -->
+      <!-- projectPart start  -->
+      <div class="py-[100px]">
+        <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+          <div
+            class="flex flex-wrap sm:flex-nowrap justify-between gap-y-5 sm:gap-y-0">
+            <div class="sm:w-1/4 w-[45%]">
+              <h2 class="">100+</h2>
+              <p class="">PROJECTS</p>
+            </div>
+            <div class="sm:w-1/4 w-[45%]">
+              <h2 class="">24</h2>
+              <p class="">WINNING AWARD</p>
+            </div>
+            <div class="sm:w-1/4 w-[45%]">
+              <h2 class="">70+</h2>
+              <p class="">HAPPY CLIENTS</p>
+            </div>
+            <div class="sm:w-1/4 w-[45%]">
+              <h2 class="">10</h2>
+              <p class="">YEAR EXPERIENCE</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- projectPart end  -->
+      <!-- service part start -->
+      <div class="py-[50px]">
+        <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+          <h3
+            style="font-family: 'Poppins', sans-serif"
+            class="text-[16px] leading-[32px] text-[#5E3BEE] font-medium">
+            SERVICES
+          </h3>
+          <h2
+            style="font-family: 'Poppins', sans-serif"
+            class="text-[44px] py-5 leading-[56px] text-[#000000] font-semibold">
+            What I Do For My Customer.
+          </h2>
+          <p
+            style="font-family: 'Poppins', sans-serif"
+            class="text-[16px] leading-[32px] text-[#121212] md:mx-[280px] mx-0 font-medium">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae
+            blandit lectus. Praesent at hendrerit velit, at dictum nisl.
+          </p>
+        </div>
+      </div>
+      <!-- service part start -->
+      <!-- box shadow part start  -->
+      <div class="py-[100px]">
+        <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+          <div class="sm:flex sm:gap-x-4">
+            <div
+              class="sm:w-1/3 w-full rounded rounded-2xl p-5 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); py-[50px] bg-[#F9F9FC] text-center">
+              <img
+                class="block mx-auto py-[40px]"
+                src="images/logo1.png"
+                alt="" />
+              <h2
+                class="pb-[20px] font-medium text-[#000000] leading-[32px] text-[20px]"
+                style="font-family: 'Poppins', sans-serif">
+                UI/UX cDesign
+              </h2>
+              <p
+                style="font-family: 'Poppins', sans-serif"
+                class="text-[#121212]">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, autem.
+              </p>
+            </div>
+            <div
+              class="sm:w-1/3 w-full my-7 sm:my-0 rounded rounded-2xl p-5 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); py-[50px] bg-[#F9F9FC] text-center">
+              <img
+                class="block mx-auto py-[40px]"
+                src="images/logo2.png"
+                alt="" />
+              <h2
+                class="pb-[20px] font-medium text-[#000000] leading-[32px] text-[20px]"
+                style="font-family: 'Poppins', sans-serif">
+                Product Design
+              </h2>
+              <p
+                style="font-family: 'Poppins', sans-serif"
+                class="text-[#121212]">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, autem.
+              </p>
+            </div>
+            <div
+              class="sm:w-1/3 w-full rounded rounded-2xl p-5 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); py-[50px] bg-[#F9F9FC] text-center">
+              <img
+                class="block mx-auto py-[40px]"
+                src="images/logo3.png"
+                alt="" />
+              <h2
+                class="pb-[20px] font-medium text-[#000000] leading-[32px] text-[20px]"
+                style="font-family: 'Poppins', sans-serif">
+                Motion Graphics
+              </h2>
+              <p
+                style="font-family: 'Poppins', sans-serif"
+                class="text-[#121212]">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, autem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- box shadow part end  -->
+      <!-- banner2 start  -->
+      <div
+        class="py-[115px] mt-[75px]"
+        style="
+          background-image: url('images/banner2.png');
+          background-size: cover;
+          background-repeat: no-repeat;
+        ">
+        <div class="sm:max-w-[1210px]  max-w-[365px] m-auto">
+          <div class="lg:flex flex:none text-center lg:text-left">
+            <div class=" lg:w-1/2 text-center lg:text-left  w-full">
+              <h3 class="text-[#5E3BEE] lg:ml-1 font-medium leading-[26px] text-[16px]">WEB DEVELOPER</h3>
+              <h2 class="font-bold text-[44px] lg:text-[60px] leading-[78px] ">WEB DEVELOPER With 3 Years Of Experience.</h2>
+              <p class="text-[#333333] leading-[32px] py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae blandit lectus. Praesent at hendrerit velit, at dictum nisl.</p>
+              <button class="btn rounded rounded-4xl btn-primary">CONTACT ME</button>
+            </div>
+            <div class="w-1/2"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- banner2 start  -->
     </div>
   </body>
 </html>
+
