--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 tabindex="0"
                 class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a>HOME</a></li>
-                <li><a>ABOUT US</a></li>
+                <li> <a href="about.html">ABOUT US</a></li>
                 <li><a>SERVICES</a></li>
                 <li><a>WORKS</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost bg-white text-black text-xl"
+            <a class="btn btn-ghost bg-white text-black sm:text-xl"
               ><img src="images/portostar.png" alt="portostar"
             /></a>
           </div>
@@ -99,7 +99,7 @@
               </h1>
               <button
                 style="font-family: 'Poppins', sans-serif"
-                class="btn btn-outline btn-primary text-black">
+                class="btn btn-outline btn-primary  text-black">
                 CONTACT ME
               </button>
               <button
@@ -108,7 +108,7 @@
                 DOWNLOAD CV
               </button>
             </div>
-            <div class="sm:w-1/2 w-full mt-20 sm:mt-0">
+            <div class="sm:w-1/2 w-full mt-20 pr-7 sm:pr-0 sm:mt-0">
               <img src="images/sakib.png" alt="sakib" />
             </div>
           </div>
