--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
               <ul
                 tabindex="0"
                 class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
-                <li><a>HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a>ABOUT US</a></li>
                 <li><a>SERVICES</a></li>
                 <li><a>WORKS</a></li>
