--- a/index.html
+++ b/index.html
@@ -245,7 +245,33 @@
         </div>
       </div>
 
-      <!-- banner2 start  -->
+      <!-- banner2 end  -->
+       <!-- portfolio text start  -->
+        <div class="py-[100px] bg-amber-500"><div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+          <div class="sm:flex flex-none text-center sm:text-left">
+            <div class="w-1/2">
+              <h3>PORTFOLIO</h3>
+              <h2>Selected Works.</h2>
+            </div>
+            <div class="w-1/2 ">
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae blandit lectus. Praesent at hendrerit velit, at dictum nisl.</p>
+            </div>
+          </div>
+        </div></div>
+       <!-- portfolio text end  -->
+
+       <!-- portfolio project start  -->
+        <div class="py-[100px] bg-amber-900"><div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+          <div class="sm:flex flex-none text-center sm:text-left">
+            <div class="w-1/2">
+
+            </div>
+            <div class="w-1/2 ">
+
+            </div>
+          </div>
+        </div></div>
+       <!-- portfolio project end  -->
     </div>
   </body>
 </html>
