--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
           <div
             class="flex flex-wrap sm:flex-nowrap justify-between gap-y-5 sm:gap-y-0">
             <div class="sm:w-1/4 w-[45%]">
-              <h2 class="">100+</h2>
-              <p class="">PROJECTS</p>
+              <h2 class="font-semibold text-[48px] leading-[56px] text-[#000000]" style="font-family: 'Poppins', sans-serif">100+</h2>
+               <p class="font-medium text-[16px] leading-[24px] text-[#121212] opacity-[70%]">PROJECTS</p>
             </div>
             <div class="sm:w-1/4 w-[45%]">
-              <h2 class="">24</h2>
-              <p class="">WINNING AWARD</p>
+              <h2 class="font-semibold text-[48px] leading-[56px] text-[#000000]" style="font-family: 'Poppins', sans-serif">24</h2>
+              <p class="font-medium text-[16px] leading-[24px] text-[#121212] opacity-[70%]">WINNING AWARD</p>
             </div>
             <div class="sm:w-1/4 w-[45%]">
-              <h2 class="">70+</h2>
-              <p class="">HAPPY CLIENTS</p>
+              <h2 class="font-semibold text-[48px] leading-[56px] text-[#000000]" style="font-family: 'Poppins', sans-serif">70+</h2>
+               <p class="font-medium text-[16px] leading-[24px] text-[#121212] opacity-[70%]">HAPPY CLIENTS</p>
             </div>
             <div class="sm:w-1/4 w-[45%]">
-              <h2 class="">10</h2>
-              <p class="">YEAR EXPERIENCE</p>
+              <h2 class="font-semibold text-[48px] leading-[56px] text-[#000000]" style="font-family: 'Poppins', sans-serif">10</h2>
+               <p class="font-medium text-[16px] leading-[24px] text-[#121212] opacity-[70%]">YEAR EXPERIENCE</p>
             </div>
           </div>
         </div>
@@ -261,12 +261,12 @@
       <div class="py-[100px]">
         <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
           <div class="sm:flex flex-none text-center sm:text-left">
-            <div class="w-1/2">
-              <h3>PORTFOLIO</h3>
-              <h2>Selected Works.</h2>
+            <div class="sm:w-1/2 w-full sm:pl-[50px] pl-0">
+              <h3 style="font-family: 'Poppins', sans-serif" class="font-medium text-[16px] leading-[26px]  text-[#5E3BEE]">PORTFOLIO</h3>
+              <h2 style="font-family: 'Poppins', sans-serif" class="font-semibold sm:text-[44px] text-[34px] leading-[56px] text-center sm:text-left text-[#000000]">Selected Works.</h2>
             </div>
-            <div class="w-1/2">
-              <p>
+            <div class="sm:w-1/2 w-full sm:px-[50px] px-0">
+              <p style="font-family: 'Poppins', sans-serif" class="text-[16px] leading-[32px] text-[#121212] opacity-[70%]">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                 vitae blandit lectus. Praesent at hendrerit velit, at dictum
                 nisl.
@@ -278,7 +278,7 @@
       <!-- portfolio text end  -->
 
       <!-- portfolio project start  -->
-      <div class="py-[100px]">
+      <div class="">
         <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
           <div class="sm:flex flex-none text-center sm:text-left">
             <div class="sm:w-1/2 w-full">
@@ -352,96 +352,73 @@
         <div class="py-[130px]" style="background: url(images/banner4.png); background-repeat: no-repeat;
         background-size: cover;">
         <div class="sm:max-w-[1210px] max-w-[365px] text-center m-auto">
-          <p>Interested Working
+          <p style="font-family: 'Poppins', sans-serif" class="font-semibold sm:text-[50px] text-[38px] leading-[52px] sm:leading-[72px] text-[#333333]">Interested Working
 With me? Let's connect!</p>
-<button class="btn btn-active btn-info">CONTACT ME</button>
+<button class="btn mt-6 btn-active rounded-4xl btn-info">CONTACT ME</button>
         </div></div>
        <!-- last banner start  -->
 
 
        <!-- footer start  -->
-        <div class="max-w-[1170px] bg-white sm:ml-[170px] ml-0 mt-[130px]">
-          <footer class="footer sm:footer-horizontal bg-base-200 text-base-content p-10">
-  <nav>
-    <h6 class="footer-title">Services</h6>
-    <a class="link link-hover">Branding</a>
-    <a class="link link-hover">Design</a>
-    <a class="link link-hover">Marketing</a>
-    <a class="link link-hover">Advertisement</a>
-  </nav>
-  <nav>
-    <h6 class="footer-title">Company</h6>
-    <a class="link link-hover">About us</a>
-    <a class="link link-hover">Contact</a>
-    <a class="link link-hover">Jobs</a>
-    <a class="link link-hover">Press kit</a>
-  </nav>
-  <nav>
-    <h6 class="footer-title">Legal</h6>
-    <a class="link link-hover">Terms of use</a>
-    <a class="link link-hover">Privacy policy</a>
-    <a class="link link-hover">Cookie policy</a>
-  </nav>
-</footer>
-<footer class="footer bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
-  <aside class="grid-flow-col items-center">
-    <svg
-      width="24"
-      height="24"
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-      fill-rule="evenodd"
-      clip-rule="evenodd"
-      class="fill-current">
-      <path
-        d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path>
-    </svg>
-    <p>
-      ACME Industries Ltd.
-      <br />
-      Providing reliable tech since 1992
-    </p>
-  </aside>
-  <nav class="md:place-self-center md:justify-self-end">
-    <div class="grid grid-flow-col gap-4">
-      <a>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          class="fill-current">
-          <path
-            d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
-        </svg>
-      </a>
-      <a>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          class="fill-current">
-          <path
-            d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
-        </svg>
-      </a>
-      <a>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          class="fill-current">
-          <path
-            d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
-        </svg>
-      </a>
-    </div>
-  </nav>
-</footer>
+        <div class="max-w-[1170px] bg-base-200 text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[130px]">
+  
+  <!-- First Footer -->
+  <footer class="footer  sm:footer-horizontal p-10">
+    <nav class="sm:w-1/2 text-center sm:text-left w-full">
+      <div class="flex">
+        <img src="images/lastlogo.png" alt="">
+        <h2 style="font-family: 'Poppins', sans-serif" class="text-[30px] font-semibold pl-4 pt-2">PORTOSTAR</h2>
+      </div>
+      <p class="leading-[32px]" style="font-family: 'Poppins', sans-serif">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae blandit lectus. Praesent at hendrerit.
+      </p>
+    </nav>
+
+    <nav class="sm:pl-[50px] pl-3">
+      <div class="flex gap-x-4">
+        <img src="images/mess.png" alt="">
+        <h2>inquiry@portostar.com</h2>
+      </div>
+      <div class="flex gap-x-4">
+        <img src="images/call.png" alt="">
+        <h2>(001) 1231 3435</h2>
+      </div>
+      <div class="flex gap-x-8 mt-8">
+        <img src="images/fb.png" alt="">
+        <img src="images/insta.png" alt="">
+        <img src="images/linkledin.png" alt="">
+        <img src="images/football.png" alt="">
+      </div>
+    </nav>
+  </footer>
+
+  <!-- Divider Line -->
+  <div class="w-[75%] h-px bg-gray-600 mx-auto"></div>
+
+  <!-- Second Footer -->
+  <footer class="footer sm:footer-horizontal p-10">
+    <nav class="sm:w-1/2 text-center sm:text-left w-full">
+      <div class="flex pt-[45px] gap-x-6">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT US</a>
+        <a href="./">SERVICES</a>
+        <a href="./">WORKS</a>
+      </div>
+    </nav>
+
+    <nav class="sm:w-1/2 text-center sm:text-right w-full">
+      <div class="pt-[43px] sm:justify-self-end justify-self-center">
+        <p>© All Right Reserved</p>
+      </div>
+    </nav>
+  </footer>
 </div>
+
        <!-- footer end  -->
     </div>
   </body>
 </html>
+
+
+
+
