--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a>HOME</a></li>
                 <li><a href="about.html">ABOUT US</a></li>
-                <li><a>SERVICES</a></li>
-                <li><a>WORKS</a></li>
+                <li><a href="service.html">SERVICES</a></li>
+                <li><a href="work.html">WORKS</a></li>
               </ul>
             </div>
             <a class="btn btn-ghost bg-white text-black sm:text-xl"
@@ -67,12 +67,12 @@
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px] pr-11">
-                <a>SERVICES</a>
+                <a href="service.html">SERVICES</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px]">
-                <a>WORKS</a>
+                <a href="work.html">WORKS</a>
               </li>
             </ul>
           </div>
@@ -360,7 +360,7 @@ With me? Let's connect!</p>
 
 
        <!-- footer start  -->
-        <div class="max-w-[1170px] bg-base-200 text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[130px]">
+        <div class="max-w-[1170px] bg-black text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[130px]">
   
   <!-- First Footer -->
   <footer class="footer  sm:footer-horizontal p-10">
@@ -401,8 +401,8 @@ With me? Let's connect!</p>
       <div class="flex pt-[45px] gap-x-6">
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT US</a>
-        <a href="./">SERVICES</a>
-        <a href="./">WORKS</a>
+        <a href="service.html">SERVICES</a>
+        <a href="work.html">WORKS</a>
       </div>
     </nav>
 
