--- a/service.html
+++ b/service.html
@@ -43,8 +43,8 @@
                 tabindex="0"
                 class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a href="index.html">HOME</a></li>
-                <li><a>ABOUT US</a></li>
-                <li><a href="service.html">SERVICES</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="">SERVICES</a></li>
                 <li><a href="work.html">WORKS</a></li>
               </ul>
             </div>
@@ -62,12 +62,12 @@
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px] pr-11">
-                <a>ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px] pr-11">
-                <a href="service.html">SERVICES</a>
+                <a href="">SERVICES</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
@@ -83,7 +83,8 @@
       </div>
       <!-- header end  -->
 
-      <h1 class="text-black text-[35px] px-[300px] mt-[200px] text-center font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
+      <h1 class="text-yellow-900 text-[35px] mt-[200px] px-[200px] text-center font-semibold leading-[100px]">OUR SERVICES AND BASIC INFORMATIONS ARE DESCRIBED HERE WHICH YOU HAVE TO KNOW</h1>
+
  <!-- footer start  -->
         <div class="max-w-[1170px] bg-black text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[277px]">
            <!-- First Footer -->
@@ -125,8 +126,8 @@
       <div class="flex pt-[45px] gap-x-6">
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT US</a>
-        <a href="service.html">SERVICES</a>
-        <a href="">WORKS</a>
+        <a href="">SERVICES</a>
+        <a href="work.html">WORKS</a>
       </div>
     </nav>
 
