--- a/work.html
+++ b/work.html
@@ -43,9 +43,9 @@
                 tabindex="0"
                 class="menu menu-sm bg-white text-black dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a href="index.html">HOME</a></li>
-                <li><a>ABOUT US</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="service.html">SERVICES</a></li>
-                <li><a href="work.html">WORKS</a></li>
+                <li><a>WORKS</a></li>
               </ul>
             </div>
             <a class="btn btn-ghost bg-white text-black text-xl"
@@ -62,7 +62,7 @@
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px] pr-11">
-                <a>ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
               </li>
               <li
                 style="font-family: 'Poppins', sans-serif"
@@ -72,7 +72,7 @@
               <li
                 style="font-family: 'Poppins', sans-serif"
                 class="text-[14px] leading-[22px]">
-                <a href="work.html">WORKS</a>
+                <a>WORKS</a>
               </li>
             </ul>
           </div>
@@ -83,7 +83,8 @@
       </div>
       <!-- header end  -->
 
-      <h1 class="text-black text-[35px] px-[300px] mt-[200px] text-center font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
+<h1 class="text-blue-500 text-[35px] px-[200px] mt-[200px] text-center font-semibold leading-[100px]">HERE OUR WORKs ARE SHOWN AND BASIC INFORMATIONS BEEN PROVIDED THAT YOU HAVE TO KNOW</h1>
+
  <!-- footer start  -->
         <div class="max-w-[1170px] bg-black text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[277px]">
            <!-- First Footer -->
