--- a/about.html
+++ b/about.html
@@ -82,8 +82,12 @@
         </div>
       </div>
       <!-- header end  -->
-
-      <h1 class="text-black text-[35px] px-[300px] mt-[200px] text-center font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
+  
+      <div class="">
+        <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
+      <h1 class="text-black text-[35px] px-[300px] mt-[200px] font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
+      </div>
+      </div>
  <!-- footer start  -->
         <div class="max-w-[1170px] bg-black text-base-content rounded-t-2xl sm:ml-[170px] ml-0 mt-[277px]">
            <!-- First Footer -->
