--- a/service.html
+++ b/service.html
@@ -85,7 +85,7 @@
 
       <div class="">
         <div class="sm:max-w-[1210px] text-center max-w-[365px] m-auto">
-      <h1 class="text-black text-[35px] px-[300px] mt-[200px] font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
+      <h1 class="text-black text-[35px] lg:px-[200px] px-[0px] mt-[200px] font-semibold leading-[100px]">THIS SECTION IS ABOUT US AND BASIC INFORMATIONS YOU HAVE TO KNOW</h1>
       </div>
       </div>
  <!-- footer start  -->
